--- a/JsonToOC_Object/Base.lproj/Main.storyboard
+++ b/JsonToOC_Object/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,7 +674,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider=""/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -683,12 +684,13 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="JsonToOC_Model" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-			<connections>
+                        <value key="minSize" type="size" width="480" height="270"/>
+                        <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
                     </window>
@@ -703,11 +705,136 @@
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mlm-nZ-X2Y">
+                                <rect key="frame" x="10" y="52" width="300" height="181"/>
+                                <clipView key="contentView" id="KgS-OL-fmH">
+                                    <rect key="frame" x="1" y="1" width="298" height="179"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textView importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="IV7-X2-6JD">
+                                            <rect key="frame" x="0.0" y="0.0" width="298" height="179"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <size key="minSize" width="298" height="179"/>
+                                            <size key="maxSize" width="463" height="10000000"/>
+                                            <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="JfX-9N-Rbf">
+                                    <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="SPJ-ZI-Z8h">
+                                    <rect key="frame" x="283" y="1" width="16" height="179"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wKO-u4-yH2">
+                                <rect key="frame" x="320" y="163" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="IT7-yK-wGr"/>
+                                    <constraint firstAttribute="height" constant="30" id="Z49-a2-DnN"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="子Model的前缀" drawsBackground="YES" id="w1V-6z-W4n">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kPw-kX-Ucf">
+                                <rect key="frame" x="320" y="203" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DRA-DL-Mdu"/>
+                                    <constraint firstAttribute="width" constant="150" id="RBs-Oi-LYb"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="model的类名" drawsBackground="YES" id="FM5-H7-NzJ">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="S0O-dq-Dem">
+                                <rect key="frame" x="10" y="10" width="271" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="4q6-98-YR5"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" enabled="NO" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Model输出路径默认为桌面" drawsBackground="YES" id="nO9-ap-WJ8">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Z6V-C4-Scc">
+                                <rect key="frame" x="285" y="3" width="94" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="lFb-19-sSP"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="选择路径" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="d41-rY-keO">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="chooseModelPathClicked:" target="XfG-lQ-9wD" id="63K-dq-gDc"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uaz-YZ-N3z">
+                                <rect key="frame" x="372" y="3" width="104" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="s10-Ja-3tZ"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="生成Model" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="dAV-36-C1R">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="createModelClicked:" target="XfG-lQ-9wD" id="I42-Rf-a3h"/>
+                                </connections>
+                            </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="DFU-NZ-Z7a">
+                                <rect key="frame" x="8" y="243" width="73" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="TUN-kh-bh7"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Json数据：" id="m9E-Cr-ZbX">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="uaz-YZ-N3z" firstAttribute="leading" secondItem="Z6V-C4-Scc" secondAttribute="trailing" constant="5" id="580-iJ-Z7G"/>
+                            <constraint firstItem="S0O-dq-Dem" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="6bJ-X1-Q2y"/>
+                            <constraint firstItem="kPw-kX-Ucf" firstAttribute="leading" secondItem="mlm-nZ-X2Y" secondAttribute="trailing" constant="10" id="9x5-em-3s1"/>
+                            <constraint firstItem="Z6V-C4-Scc" firstAttribute="leading" secondItem="S0O-dq-Dem" secondAttribute="trailing" constant="10" id="C6q-qh-qmh"/>
+                            <constraint firstAttribute="bottom" secondItem="S0O-dq-Dem" secondAttribute="bottom" constant="10" id="EIn-iY-TCb"/>
+                            <constraint firstItem="DFU-NZ-Z7a" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="10" id="GnO-QU-F2D"/>
+                            <constraint firstItem="wKO-u4-yH2" firstAttribute="top" secondItem="kPw-kX-Ucf" secondAttribute="bottom" constant="10" id="LWQ-yp-V2a"/>
+                            <constraint firstAttribute="trailing" secondItem="uaz-YZ-N3z" secondAttribute="trailing" constant="10" id="P4Y-52-SfU"/>
+                            <constraint firstAttribute="bottom" secondItem="Z6V-C4-Scc" secondAttribute="bottom" constant="10" id="V2h-nz-ftP"/>
+                            <constraint firstAttribute="trailing" secondItem="wKO-u4-yH2" secondAttribute="trailing" constant="10" id="Wls-Zr-Edd"/>
+                            <constraint firstAttribute="bottom" secondItem="uaz-YZ-N3z" secondAttribute="bottom" constant="10" id="bU3-6j-CmZ"/>
+                            <constraint firstItem="mlm-nZ-X2Y" firstAttribute="top" secondItem="DFU-NZ-Z7a" secondAttribute="bottom" constant="10" id="e3a-tC-QTu"/>
+                            <constraint firstItem="DFU-NZ-Z7a" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="lPw-pR-KgV"/>
+                            <constraint firstItem="mlm-nZ-X2Y" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="p9k-MG-Bh1"/>
+                            <constraint firstItem="S0O-dq-Dem" firstAttribute="top" secondItem="mlm-nZ-X2Y" secondAttribute="bottom" constant="20" id="xFf-y0-ETh"/>
+                            <constraint firstAttribute="trailing" secondItem="kPw-kX-Ucf" secondAttribute="trailing" constant="10" id="xGt-cm-hN6"/>
+                            <constraint firstItem="kPw-kX-Ucf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="37" id="yjq-0C-6y9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="jsonData" destination="mlm-nZ-X2Y" id="zo7-5d-wWX"/>
+                        <outlet property="modelClassName" destination="kPw-kX-Ucf" id="x7R-zZ-s8y"/>
+                        <outlet property="modelPath" destination="S0O-dq-Dem" id="I8o-NE-OSh"/>
+                        <outlet property="subModelPrefix" destination="wKO-u4-yH2" id="rKS-LQ-FTa"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
